fix: swagger api docs
